--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -691,3 +691,45 @@ th, td {
   }
 }
 
+.test-link {
+  padding: 15px 25px;
+  width: 100%;
+  text-align: left;
+  background: #F8F8F8;
+  white-space: normal;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px #ccc;
+  transition: all .3s;
+  color: #292929;
+  font-size: 16px;
+  cursor: pointer;
+  max-width: calc(100% - 250px);
+
+  &:hover {
+    box-shadow: 2px 2px 4px #999, inset 0 0 20px #fff;
+  }
+}
+
+.test-link:disabled {
+  color: #ccc;
+  cursor: not-allowed;
+}
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active до версии 2.1.8 */ {
+  opacity: 0;
+}
+
+.slide-fade-enter-active {
+  transition: all .3s ease;
+}
+.slide-fade-leave-active {
+  transition: all .3s ease;
+}
+.slide-fade-enter, .slide-fade-leave-to {
+  transform: translateY(-15px);
+  opacity: 0;
+}
