--- a/pages/admin/styles.scss
+++ b/pages/admin/styles.scss
@@ -57,3 +57,56 @@
     }
   }
 }
+
+.highlighted {
+  background-color: rgba(255, 0, 0, .1);
+}
+
+table {
+  border: none;
+  table-layout: fixed;
+  width: 100px;
+
+  thead {
+    th {
+      border: none;
+    }
+
+    th.w35 {
+      width: 35px;
+    }
+
+    th.w25 {
+      width: 25px;
+    }
+  }
+
+  tbody {
+    td.w35 {
+      width: 35px;
+    }
+
+    td.w25 {
+      width: 25px;
+    }
+
+    td.no-border {
+      border: none;
+    }
+
+    td.bold {
+      font-weight: bold;
+    }
+    td.selected {
+      background-color: rgba(0, 255, 0, 0.2);
+      font-weight: bold;
+    }
+  }
+}
+
+.grid-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  max-height: 860px;
+}
