--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -704,7 +704,7 @@ th, td {
   color: #292929;
   font-size: 16px;
   cursor: pointer;
-  max-width: calc(100% - 250px);
+  //max-width: calc(100% - 250px);
 
   &:hover {
     box-shadow: 2px 2px 4px #999, inset 0 0 20px #fff;
